[package]
name = "tinyguardian"
version = "0.1.0"
authors = ["TSP_Panda <chris.barwick16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"]}
serde_json = "1.0"
tokio  = "0.2"
kankyo = "0.2"
pretty_env_logger = "0.4"
log = "0.4"
indoc = "0.3"
mongodb = "1.0.0"
once_cell = "1.4.0"
bson = "1.0.0"
r2d2_redis = "0.13.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity/"
branch = "await"
default-features = false
features = ["client", "cache", "gateway", "rustls_backend", "model", "framework", "standard_framework"]