[package]
name = "tinyguardian"
version = "0.1.0"
authors = ["TSP_Panda <chris.barwick16@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"]}
serde_json = "1.0"
tokio  = "0.2"
kankyo = "0.2"
mongodb = "1.0.0"
once_cell = "1.4.0"
bson = "1.0.0"
r2d2_redis = "0.13.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
rlua = "0.17.0"
select = "*"

[dependencies.serenity]
version = "0.9.0-rc.2"
default-features = false
features = ["client", "cache", "gateway", "rustls_backend", "model", "framework", "standard_framework"]